--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/pwa": "^16.2.3",
     "@angular/router": "^16.2.0",
+    "@angular/service-worker": "^16.2.6",
+    "firebase": "^10.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
